--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ p {
 }
 
 a {
-  color: #11999E;
+  color: #189a9e;
   font-style: 'Montserrat', sans-serif;
   margin: 10px 20px;
   text-decoration: none;
